Fix Horizontal Scrollbar issue on AOS

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,8 @@
 html, body {
   height: 100%;
   font-family: 'Manrope', sans-serif;
+  overflow-x: clip;
+  
 }
 
 a {
